--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: "LINESeedJP_OTF_Rg";
+  src: url("font/LINESeedJP_OTF_Rg") format("woff");
+}
+
+body {
+  font-family: "LINESeedJP_OTF_Rg";
+  margin: -1px;
+  padding: -1px;
+}
+
 .main_picture {
   height: 300px;
   position: relative;
@@ -5,15 +16,37 @@
 
 .contents {
   display: flex;
+  overflow: hidden;
+}
+
+.contents_main h1 {
+  color: #cf352e;
+  font-weight: bold;
+}
+
+.contents_main a {
+  color: #cf352e;
+  text-decoration: none;
 }
 
 .contents_side {
+  background-color: #cf352e;
   padding: 20px;
   margin-right: 60px;
+  padding-bottom: 10000px;
+  margin-bottom: -10000px;
+}
+
+.contents_side a {
+  color: white;
+  text-decoration: none;
 }
 
 .main_picture img {
-  height: 300px;
+  margin: -20px;
+  width: 170%;
+  height: 250px;
+  object-fit: cover;
 }
 
 .main_picture {
@@ -23,6 +56,8 @@
 .main_picture p {
   position: absolute;
   color: white;
-  top: 50%;
-  left: 25%;
+  top: 0%;
+  left: 0%;
+  font-size: 60px;
+  font-weight: bold;
 }
