--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,6 @@ body {
 
 .contents {
   display: flex;
-  overflow: hidden;
 }
 
 .contents_main h1 {
@@ -34,13 +33,14 @@ body {
 
 .contents_side {
   background-color: #cf352e;
-  padding: 40px;
+  padding: 70px;
   margin-right: 20px;
-  padding-bottom: 10000px;
-  margin-bottom: -10000px;
+  padding-bottom: 120px;
+  margin-bottom: -120px;
 }
 
 .contents_side a {
+  font-size: 20px;
   color: white;
   transition: all 0.3s ease 0s;
   text-decoration: none;
@@ -54,6 +54,7 @@ body {
 .main_picture {
   position: relative;
   height: 50vh;
+  width: 180vh;
   overflow: hidden;
   margin-left: -20px;
 }
@@ -67,7 +68,7 @@ body {
   width: 100%;
   height: 100%;
   opacity: 0;
-  animation: imgFade-chg-img-anim 45s infinite;
+  animation: imgFade-chg-img-anim 40s infinite;
 }
 
 .main_picture.imgFade .img:nth-of-type(1) {
@@ -102,10 +103,6 @@ body {
   animation-delay: 35s;
 }
 
-.main_picture.imgFade .img:nth-of-type(9) {
-  animation-delay: 40s;
-}
-
 @keyframes imgFade-chg-img-anim {
   0% {
     opacity: 0;
@@ -129,7 +126,7 @@ body {
 .main_title p {
   position: absolute;
   color: white;
-  top: 10%;
+  top: 25%;
   left: 5%;
   font-size: 60px;
   font-weight: bold;
